--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -31,6 +31,8 @@
 
 body{
   background-color: #282828fa;
+  margin: 0;
+  padding: 0;
   width: 100%;
   overflow-x: hidden;
   overflow-y: scroll;
